--- a/index.html
+++ b/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/wedding-ring.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Démi & Norbi</title>
   </head>
-  <body
-    style="
-      background-image: url(./src//assets/video2.jpg);
-      background-attachment: fixed;
-      background-position: top;
-    "
-  >
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
